# shallabuf

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  README.md  biome.json  bun.lockb  docker-compose.yaml  justfile  ocr_output.json  package.json  tsconfig.json  turbo.json
.sqlx/: query-15cfe3d5726b5c6a90992606778d4be0da95b64e23802143a5c13032bac18506.json  query-295a893e21397596be71d96ae1332c4f59fcffcc9ca68bd63d5536331b6f68cf.json  query-32243362f8a77376833a5d6335d069bd8e2b929403b113c938aa4785e414272f.json  query-3b798d859f72554d7389004f1f0792ccd3b4b3540fa6b8031f618c6ca974cb94.json  (+39 more)
api/: .env.example  Cargo.toml  Dockerfile  fly.toml
api/.sqlx/: query-1c4baca18f7e753d115660e7339744974acd9a67ad75a2d91ba90292ac06a845.json  query-2629752404d8ee29e8b16e661f96e3306489769389fd48740bbcdcf2de6bf07a.json  query-2846b3ac52babb515fbdbe9f0436e6b679566d9a5ca114f221643b8e73c6c1c0.json  query-37a59e3bf95115a4bff547202e37c1064a91b67fff5967f8c11377b0628a1107.json  query-404d3950eb3cff28aaea35011d6f5f798bf5ee24d975e97d0eec51591f0dd6a5.json  query-431eb46b90d664a667e6773585bc8b9b3b375ad943df7d56cef6ab22c0eacdb4.json  query-500cf447b76a3123d3e8922941cbeb237509491b1c9a069808ab3dcd8de1bc94.json  query-62762a672288d9556e459e2e4be427ee5e7b08affdef65663de5ee833335ffa2.json  query-64e6b065123aa0b22c2857e6a6fe705ec660c4371d7c9a2157c7b67fddf384e7.json  query-8852cad87911a5e01f8bffbbdb327eb7b6dae0e85a02fc111ae0cb92ede2b6ad.json  query-8d172a6a23105ebdd63a1d9850d5671116fd2511eaaaed47ce340d009a1f3b4a.json  query-9e3ce2a097eb73545fcb3328a72ec56b5046917b78ea6e0b5ab09f5fd6e57f4b.json  query-b01b7a78def4e0baa2da9ad5df91a0906b719c8c9a88dc7ad5ea755c5005ef6a.json  query-b03cd74ecf1dcc182d1c302135aeb71f5d06efd6bea453853701d8b5c0a784e4.json  query-b9f4e6658c6f5da209d780c40c181caf12ca44fd181be943c73596e4d7593915.json  query-bd26728e16b6c1af542d3437d0e6524e55e254201def11be74f573cd5f45d81a.json  query-c823910102d9e93deb112987f9ec1b484cd581b598fba5958c8fe3f7018626e3.json  query-ce4113cfba88342acd358a003a44ac116de5c29fc73958fb8f2fa197d5a59461.json  query-d8e8eb24eae9f1c29b8ee0c0825bd5c89c3b2b8d8974c94d4a3fb17084f95f07.json  query-dde4db64ed9fcbfcefcde24ed86033b895ebaae051e7654a55bb1f77df498737.json  query-fa048e37c458a4bd68af6ba7b672f88131af1696cff0bf2a4cc40fe16106228d.json
api/migrations/: 20241212133000_helpers.down.sql  20241212133000_helpers.up.sql  20241212133003_auth.down.sql  20241212133003_auth.up.sql  20241212133004_invites.up.sql  20241212133004_stripe.down.sql  20241212133004_stripe.up.sql  20250321194916_apps.down.sql  20250321194916_apps.up.sql
api/src/: app_state.rs  config.rs  error.rs  main.rs  seed.rs  session.rs
api/src/extractors/: config.rs  database_connection.rs  mod.rs  redis_connection.rs  resend.rs  session.rs  stripe.rs
api/src/routes/: apps.rs  auth.rs  invites.rs  jwt.rs  metrics.rs  mod.rs  orgs.rs  stripe.rs
api/src/routes/api/v0/: auth.rs  mod.rs  pipeline_nodes.rs  pipelines.rs
api/src/services/: mod.rs  resend.rs  stripe.rs
backend/: Cargo.toml  (+4 more)
backend/api/: Cargo.toml
backend/api/src/: app_state.rs  main.rs  utils.rs
backend/api/src/extractors/: session.rs
backend/api/src/lib/: session.rs
backend/api/src/routes/api/v0/: auth.rs  events.rs  nodes.rs  pipeline_execs.rs  pipeline_node_connections.rs  teams.rs
backend/builtins/: Cargo.toml  mistralai.wasm
backend/builtins/wit/: shallabuf.wit
backend/db/: Cargo.toml
backend/db/migrations/: 20241212133000_helpers.up.sql  20241212133002_casbin.down.sql  20241212133002_casbin.up.sql  20241212133003_auth.down.sql  20241212133003_auth.up.sql  20241212133015_pipeline_exec.up.sql
backend/db/src/: lib.rs  seed.rs
backend/db/src/dtos/: exec_status.rs  mod.rs  node_config.rs  node_container_type.rs  pipeline_exec_event.rs  pipeline_execs_payload.rs  pipeline_plan_payload.rs  pipeline_trigger_config.rs
backend/event-bridge/: Cargo.toml
backend/event-bridge/src/: lib.rs  main.rs
backend/scheduler/: Cargo.toml
backend/scheduler/src/: main.rs  pipeline_run.rs
backend/user/: Cargo.toml  build.rs
backend/user/src/: lib.rs  main.rs  service.rs
backend/user/src/utils/: config.rs  interceptor.rs  mod.rs
backend/worker/: Cargo.toml
backend/worker/src/: main.rs  s3_binding.rs
cron/: .env  Cargo.toml
cron/src/: lib.rs
db/: .env.example  Cargo.toml
db/.sqlx/: query-1706f08cba235914d7e5058c2d496e12566356369e327fb6ff70809606691621.json  query-38d489677cf2ae2faaa8f8512382ce539085830f1d190f89d29af108d2fb6719.json  query-4870961b394e10ffe2c79a8bf12c4a1a2a9412805f1e0f504d2ff8ac24a344ac.json  query-62b2e663735fcbd06e9be202a391b430c4be51465fd6b0f443be10f7574455be.json  query-87fca8f7132a4648ad23c17a37f5b5f5d490e8dbcf9edc4831b6a6cd89e6f62c.json  query-987469af075660cb8b4f0e95db5171608b30971a2e4e86b05e5fbe00226c6c79.json  query-9e121b18fb92668b83c2fc88f3de5443c9eb857f5fe660f4a42c5706a0835e4c.json  query-fb3adefa3aa45b18ce2abfc7bf10d627d8c3e54258510d7fa7b24d161143c9e7.json
db/migrations/: 20241212133004_invites.down.sql  20241212133007_pipeline.down.sql  20241212133007_pipeline.up.sql  20241212133015_pipeline_exec.down.sql  20250321194916_apps.down.sql  20250321194916_apps.up.sql  20250602171732_metrics.down.sql  20250602171732_metrics.up.sql
db/src/: lib.rs  seed.rs
db/src/dto/: key_provider_type.rs  mod.rs
platform/: .env.examples  Cargo.toml  Dockerfile  fly.toml
platform/docs/: refactoring_plan.md
platform/src/: lib.rs  main.rs
platform/src/messaging/: bus.rs  errors.rs  events.rs  mod.rs
platform/src/messaging/handlers/: broadcast.rs  mod.rs
platform/src/messaging/processors/: json.rs  mod.rs
platform/src/messaging/transports/: mod.rs  nats.rs
platform/src/storage/: mod.rs  redis.rs
platform/src/utils/: auth_guard.rs  config.rs  logger.rs  mod.rs  nats.rs
platform/src/ws/: bus_proxy.rs  connection.rs  crdt.rs  handler.rs  mod.rs  session.rs
platform/src/ws/dto/: incoming_message.rs  mod.rs  outgoing_message.rs
platform/src/ws/metrics/: collector.rs  connection.rs  data_transfer.rs  mod.rs  repository.rs
platform/src/ws/middlewares/: auth.rs  broadcast.rs  mod.rs
(+404 files in other folders)
