[package]
name = "api"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
axum = { version = "^0.8", features = ["json"] }
axum-extra = { version = "^0.10", features = ["typed-header", "query"] }
tokio = { version = "^1", features = ["full"] }
tower-http = { version = "^0.6", features = ["cors"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "json", "time", "uuid"] }
redis = { version = "^0.31", features = ["tokio-comp", "connection-manager"] }
dotenvy = "^0.15"
argon2 = "^0.5"
config = "^0.15"
uuid = { version = "^1", features = ["v4", "serde"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
anyhow = "^1"
rand = "^0.9"
base64 = "^0.22"
jsonwebtoken = "^9.3"
time = { version = "^0.3", features = ["serde"] }
hex = "^0.4"
base32 = "^0.5"
sha2 = "^0.10"
thiserror = "^2.0"
reqwest = { version = "^0.12", features = ["json"] }
validator = { version = "0.20", features = ["derive"] }
once_cell = "1.19.0"
resend-rs = "0.15.0"
