[package]
name = "db"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "json", "time", "uuid"] }
argon2 = "^0.5"
dotenvy = "^0.15"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tokio = { version = "^1", features = ["full"] }
anyhow = "^1"
