[package]
name = "platform"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "^1.44", features = ["full"] }
tokio-tungstenite = { version = "^0.26", features = ["native-tls"] }
futures-util = "^0.3"
async-nats = "^0.40"
redis = { version = "^0.29", features = ["tokio-comp", "connection-manager"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
native-tls = "0.2"
rcgen = "^0.13"
tokio-native-tls = "^0.3"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
dotenvy = "^0.15"
config = "^0.15"
url = "^2.5"
jsonwebtoken = "^9.2"
async-trait = "^0.1"
thiserror = "^2.0"
anyhow = "^1.0"
derive_builder = "^0.20"
yrs = { version = "^0.23", features = ["sync"] }
base64 = "0.21.7"
uuid = { version = "^1.7", features = ["v4"] }
