[package]
name = "platform"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "^1.45", features = ["full"] }
tokio-tungstenite = { version = "^0.26", features = ["native-tls"] }
futures-util = "^0.3"
async-nats = "^0.42"
redis = { version = "^0.32", features = ["tokio-comp", "connection-manager"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
native-tls = "0.2"
rcgen = "^0.13"
tokio-native-tls = "^0.3"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
dotenvy = "^0.15"
config = "^0.15"
url = "^2.5"
jsonwebtoken = "^9.3"
async-trait = "^0.1"
thiserror = "^2.0"
anyhow = "^1.0"
derive_builder = "^0.20"
yrs = { version = "^0.23", features = ["sync"] }
base64 = "0.22.1"
uuid = { version = "^1.17", features = ["v4"] }
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "json", "time", "uuid"] }
time = { version = "^0.3", features = ["serde"] }
db = { path = "../db" }
