[package]
name = "api"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = { version = "^0.7", features = ["ws", "macros"] }
axum-extra = { version = "^0.9", features = ["typed-header", "query"] }
tokio = { version = "^1", features = ["full"] }
tower = "^0.5"
hyper = { version = "^1.5", features = ["full"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
uuid = { version = "^1", features = ["v4", "serde"] }
rand = "^0.9"
base32 = "^0.5"
chrono = { version = "^0.4", features = ["serde"] }
hex = "^0.4"
sha2 = "^0.10"
async-nats = "^0.38"
futures = "^0.3"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-loki = "^0.2"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "json", "time", "uuid"] }
dotenvy = "^0.15"
tower-http = { version = "^0.6", features = ["cors"] }
argon2 = "^0.5"
redis = { version = "^0.28", features = ["tokio-comp", "connection-manager"] }
async-stream = "0.3"
db = { path = "../db", features = ["seed"] }
event-bridge = { path = "../event-bridge" }
