[package]
name = "builtins"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
wit-bindgen = { version = "^0.40", features = ["realloc", "macros"] }
wasi = { version = "^0.14" }
waki = "0.5.1"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "btc-price"
path = "src/bin/btc-price.rs"

[[bin]]
name = "echo"
path = "src/bin/echo.rs"

[[bin]]
name = "text-transformer"
path = "src/bin/text-transformer.rs"
