[package]
name = "db"
version = "0.1.0"
edition = "2021"

[lib]
name = "db"
path = "src/lib.rs"

[[bin]]
name = "seed"
path = "src/bin/seed.rs"

[dependencies]
uuid = { version = "^1", features = ["v4", "serde"] }
async-std = { version = "^1", features = ["attributes", "tokio1"] }
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
aws-sdk-s3 = { version = "^1.66", features = ["behavior-version-latest"] }
anyhow = "^1"
argon2 = "^0.5"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "json", "time", "uuid"] }
tokio = { version = "^1", features = ["full"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = []
seed = []
