[package]
name = "event-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "^1", features = ["full"] }
dotenvy = "^0.15"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "json", "time", "uuid"] }
async-nats = "^0.38"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-loki = "^0.2"
