[package]
name = "scheduler"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "json", "time", "uuid"] }
uuid = { version = "^1", features = ["v4", "serde"] }
async-nats = "^0.38"
futures = "^0.3"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-loki = "^0.2"
dotenvy = "^0.15"
petgraph = "^0.7"

db = { path = "../db" }
