[package]
name = "user"
version = "0.1.0"
edition = "2024"

[lib]
name = "user"
path = "src/lib.rs"

[[bin]]
name = "user"
path = "src/main.rs"

[dependencies]
tonic = "^0.12"
tower = "^0.5"
prost = "^0.13"
prost-types = "^0.13"
tokio = { version = "^1.0", features = ["full"] }
sqlx = { version = "^0.8", features = ["runtime-tokio-rustls", "postgres", "chrono"] }
redis = { version = "^0.29", features = ["tokio-comp", "connection-manager"] }
dotenvy = "^0.15"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
chrono = { version = "^0.4", features = ["serde"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^2.0"
config = "^0.15"
argon2 = "^0.5"
rand = "^0.9"
base32 = "^0.5"
hex = "^0.4"
sha2 = "^0.10"
uuid = { version = "^1", features = ["v4", "serde"] }
db = { path = "../db", features = ["seed"] }
http = "1.3.1"
http-body-util = "0.1.3"


[dev-dependencies]
testcontainers = "^0.23.0"
testcontainers-modules = { version = "^0.11", features = ["postgres", "redis"] }
tokio-test = "^0.4"

[build-dependencies]
tonic-build = "^0.12"
