[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "^1"
async-nats = "^0.39"
dotenvy = "^0.15"
futures = "^0.3"
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
tracing-loki = "^0.2"
wasmtime = { version = "^30" }
wasmtime-wasi = { version = "^30" }
aws-sdk-s3 = { version = "^1.66", features = ["behavior-version-latest"] }
sqlx = { version = "^0.8", features = ["postgres", "runtime-tokio-native-tls", "macros", "json", "time", "uuid"] }
serde = { version = "^1", features = ["derive"] }
uuid = { version = "^1", features = ["v4", "serde"] }
wasmtime-wasi-http = "30.0"
bytes = "^1"
async-trait = "^0.1"
hyper = { version = "^1.6", features = ["full"] }
hyper-tls = "^0.6"
hyper-util = { version = "^0.1", features = ["client", "tokio"] }
http-body-util = "^0.1"

db = { path = "../db" }
